--- a/docker-compose-image.yml
+++ b/docker-compose-image.yml
@@ -1,8 +1,8 @@
 version: '2'
 
 services:
-  markov:
-    build: .
+  discord-rmb-bot:
+    image: jaydee2202/discord-rmb:latest
     restart: unless-stopped
     container_name: discord-rmb-bot
     mem_limit: 128m
@@ -12,5 +12,3 @@ services:
       - DISCORD_ROLE_DEST=1234123412341236
       - DISCORD_SERVER_ID=1234123412341234
       - DISCORD_TOKEN=1234123412341234
-    labels:
-      - com.centurylinklabs.watchtower.enable=false
